Bug 508355 - Cloning the taskbar panel to a different monitor doesn't clone the System Tray Settings
Summary: Cloning the taskbar panel to a different monitor doesn't clone the System Tra...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.4.4
Platform: CachyOS Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-16 16:22 UTC by Shaun Roselt
Modified: 2025-08-21 17:06 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shaun Roselt 2025-08-16 16:22:14 UTC
SUMMARY

Every time I clone the taskbar panel, then I need to reconfigure my System Tray Settings. It doesn't clone that also.

SOFTWARE/OS VERSIONS
Operating System: CachyOS Linux 
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.16.0-8-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 8845HS w/ Radeon 780M Graphics
Memory: 64 GiB of RAM (62.1 GiB usable)
Graphics Processor 1: NVIDIA GeForce RTX 4060 Laptop GPU
Graphics Processor 2: AMD Radeon 780M Graphics
Comment 1 Nate Graham 2025-08-18 20:34:39 UTC
I can reproduce this on git master too.
Comment 2 Niccolò Venerandi 2025-08-21 09:59:05 UTC
Will be fixed by https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3118
Comment 3 Nate Graham 2025-08-21 15:38:38 UTC
Git commit 136fde04a4bbf64d8613bcdf6668cde9cb309c1b by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 21/08/2025 at 15:38.
Pushed by ngraham into branch 'master'.

Emit config changed signal for system tray upon panel cloning

Otherwise, the system tray will not update to use the newly-copied
config information.
FIXED-IN: 6.4.5

M  +1    -0    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/136fde04a4bbf64d8613bcdf6668cde9cb309c1b
Comment 4 Nate Graham 2025-08-21 17:06:06 UTC
Git commit 65e52ac1fe85d07037a722c4e1d63d05f7b69a54 by Nate Graham.
Committed on 21/08/2025 at 15:39.
Pushed by ngraham into branch 'Plasma/6.4'.

Emit config changed signal for system tray upon panel cloning

Otherwise, the system tray will not update to use the newly-copied
config information.
FIXED-IN: 6.4.5


(cherry picked from commit 136fde04a4bbf64d8613bcdf6668cde9cb309c1b)

f785ef53 Emit config changed signal for system tray upon panel cloning

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +1    -0    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/65e52ac1fe85d07037a722c4e1d63d05f7b69a54