Emit config changed signal for system tray upon panel cloning

Otherwise, the system tray will not update to use the newly-copied
config information.

BUG: 508355
FIXED-IN: 6.4.5


(cherry picked from commit 136fde04a4bbf64d8613bcdf6668cde9cb309c1b)

f785ef53 Emit config changed signal for system tray upon panel cloning

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>